kube/prod/envoy/envoy.yaml
---
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 5000
static_resources:
  listeners:
    - name: frontend
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: proxy
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /w/
                          route:
                            cluster: app_cluster
                        - match:
                            prefix: /
                          route:
                            cluster: workspace_cluster
  clusters:
    - name: app_cluster
      connect_timeout: 10s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: app_cluster_1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app-cluster
                      port_value: 9000
    - name: workspace_cluster
      connect_timeout: 10s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: workspace_cluster_1
        endpoints:
          - lb_endpoints:
              endpoint:
                address:
                  socket_address:
                    address: workspace-cluster
                    port_value: 9000
