kube/prod/envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
    - name: service
      port: 8000
      targetPort: 8000
    - name: admin
      port: 5000
      targetPort: 5000
